--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>V2</title>
 </head>
 <body>
-<meta http-equiv="refresh" content="0.01;url=https://trojan0.github.io/">
-<meta http-equiv="refresh" content="0.1;url=https://trojan0.github.io/">
+<meta http-equiv="refresh" content="0.01;url=https://s-s-r.github.io/">
+<meta http-equiv="refresh" content="0.1;url=https://s-s-r.github.io/">
 </body>
 </html>
